--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,4 +2,5 @@ driver_name = webdriver.chrome.driver
 driver_path = src/main/resources/chromedriver.exe
 base_url = https://mail.google.com
 time_wait = 30
+explicit_wait = 60
 data_source = src/main/resources/datasource.json
