--- a/src/main/resources/log4j2.yaml
+++ b/src/main/resources/log4j2.yaml
@@ -9,7 +9,11 @@ Configuration:
     Console:
       name: Console_Log
       PatternLayout:
-        Pattern: "%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n"
+        Pattern: "%highlight{%-5level}{FATAL=bg_red} %style{%date{yyyy-MM-dd HH:mm:ss.SSS}}{blue} %class{1}:%L - %highlight{%msg} %xEx{short}%n"
+    File:
+      name: Log_File
+      PatternLayout:
+        Pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} %class{1}:%L - %msg%xEx{short}%n"
 
   Loggers:
     Root:
@@ -17,3 +21,5 @@ Configuration:
       AppenderRef:
         - ref: Console_Log
           level: all
+        - ref: Log_File
+            level: all
