--- a/src/main/resources/log4j2.yaml
+++ b/src/main/resources/log4j2.yaml
@@ -12,6 +12,7 @@ Configuration:
         Pattern: "%highlight{%-5level}{FATAL=bg_red} %style{%date{yyyy-MM-dd HH:mm:ss.SSS}}{blue} %class{1}:%L - %highlight{%msg} %xEx{short}%n"
     File:
       name: Log_File
+      fileName: ${log-path}/logfile.log
       PatternLayout:
         Pattern: "[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} %class{1}:%L - %msg%xEx{short}%n"
 
@@ -22,4 +23,4 @@ Configuration:
         - ref: Console_Log
           level: all
         - ref: Log_File
-            level: all
+          level: all
